syntax = "proto3";
option java_multiple_files = true;

package online.gonlink;
import "common.proto";

// === GetStringBase64Image ===
message GetStringBase64ImageRequest{
  string content = 1;
  int32 width = 2;
  int32 height = 3;
}

message GetStringBase64ImageResponse{
  string base64Image = 1;
}

service QRCode {
  rpc getStringBase64Image(GetStringBase64ImageRequest) returns(online.gonlink.BaseGrpc){}
}

